--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/thiagosanches/arisco#readme",
   "dependencies": {
+    "bluebird": "^3.5.1",
+    "eslint": "^4.10.0",
     "node-telegram-bot-api": "^0.29.0"
   }
 }
