--- a/config.json
+++ b/config.json
@@ -12,6 +12,7 @@
 				"testing" : "echo 'not executing with spawn'"
 			}
 		],
-		"deniedCommands" : ["rm", "rmdir", "shutdown", "halt", "sudo", "mv", "touch", "chmod", "wget", "curl", "echo"]
+		"deniedCommands" : ["rm", "rmdir", "shutdown", "halt", "sudo", "mv", "touch", "chmod", "wget", "curl", "echo"],
+		"arduino": "http://192.168.15.7:5000"
 	}
 }
