--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "bluebird": "^3.5.1",
     "eslint": "^4.10.0",
+    "node-fetch": "^2.6.1",
     "node-telegram-bot-api": "^0.29.0"
   }
 }
