--- a/config.json
+++ b/config.json
@@ -13,6 +13,7 @@
 			}
 		],
 		"deniedCommands" : ["rm", "rmdir", "shutdown", "halt", "sudo", "mv", "touch", "chmod", "wget", "curl", "echo"],
-		"arduino": "http://192.168.15.7:5000"
+		"arduino": "http://192.168.15.7:5000",
+		"esp32cam": "http://192.168.15.11"
 	}
 }
