--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
   },
   "homepage": "https://github.com/thiagosanches/arisco#readme",
   "dependencies": {
-        "axios": "^0.21.1",
+    "axios": "^0.21.1",
     "bluebird": "^3.5.1",
     "eslint": "^4.10.0",
+    "ngrok": "^4.2.2",
     "node-fetch": "^2.6.1",
     "node-telegram-bot-api": "^0.29.0"
   }
