--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.21.1",
     "bluebird": "^3.5.1",
     "eslint": "^4.19.1",
-    "node-telegram-bot-api": "^0.29.0"
+    "node-telegram-bot-api": "^0.29.0",
+    "puppeteer": "^15.4.0"
   }
 }
